# YoungWook0533-BARAM-2024-first-semester-project

./: README.md
controllers/: CMakeLists.txt  package.xml
controllers/joint_state_pub/: iiwa_fk.cpp  iiwa_ik.cpp  joint_state_pub.cpp
controllers/joint_traj_action/: iiwa_fk.cpp  iiwa_ik.cpp  joint_traj_action.cpp
controllers/joint_traj_pub/: iiwa_fk.cpp  iiwa_ik.cpp  iiwa_ik_optimized.cpp  joint_traj_pub.cpp
controllers/launch/: controller.launch.py
iiwa_ros2/iiwa_bringup/config/: test_trajectory_config.yaml
iiwa_ros2/iiwa_bringup/launch/: iiwa.launch.py
iiwa_ros2/iiwa_description/: package.xml
iiwa_ros2/iiwa_description/config/: iiwa.config.xacro  initial_positions.yaml
iiwa_ros2/iiwa_description/gazebo/: iiwa.gazebo.xacro
iiwa_ros2/iiwa_description/gazebo/worlds/: empty.world
iiwa_ros2/iiwa_description/urdf/: iiwa.urdf.xacro
